# Take-Off-Tool

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  geometry.ts  index.css  types.ts
frontend/src/components/: LoadingOverlay.tsx  PolygonEditor.tsx  RoomOverlay.tsx  RoomSidebar.tsx  Settings.tsx  Sidebar.tsx  ToastContainer.tsx  UploadPage.tsx  Viewer.tsx
frontend/src/hooks/: usePageResults.ts  useToast.ts
frontend/src/types/: rooms.ts
