[project]
name = "plan-takeoff-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "openpyxl>=3.1.5",
    "Pillow>=12.1.0",
    "pymupdf>=1.27.1",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.0",
    "uvicorn>=0.41.0",
]

[tool.uv.sources]
